# youtube-transcript

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PERPLEXITY.md  README.md  extract_qa.py  extract_questions.py  pyproject.toml  requirements-optional.txt  requirements.txt  setup.cfg  test_transcript.py  transcript.txt  youtube_transcript.py
.github/workflows/: ci.yml
outputs/: 2aldTxnbNt0_summary.txt  2aldTxnbNt0_transcript.txt  FOSom6-IWV0_summary.txt  FOSom6-IWV0_transcript.txt  MOCKASYNC01_summary.txt  MOCKPERP01A_summary.txt  MOCKPERP01A_transcript.txt  MOCKUI00001_summary.txt  MOCKVIDEO01_questions.txt  MOCKVIDEO01_summary.txt  MOCKVIDEO02_qa.txt  MOCKVIDEO02_summary.txt  MOCKVIDEO04_qa.txt  MOCKVIDEO04_questions.txt  MOCKVIDEO04_transcript.txt
scripts/: api_app.py  api_app_clean.py  api_app_fixed.py  api_app_repaired.py  extract_qa_cli.py  extract_questions_cli.py  fetch_transcript.py
tests/: test_extractors.py
yt_transcript_tools/: __init__.py  advanced_qa.py  downloader.py  extractors.py  fetcher.py  perplexity.py  question_extractor.py
